--- a/src/pages/quotes-library/quotes-library.html
+++ b/src/pages/quotes-library/quotes-library.html
@@ -7,12 +7,19 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>quotes-library</ion-title>
+    <ion-title>Quotes Library</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <h3 text-center>Select your favourite Quote</h3>
+  <ion-list>
+    <button ion-item *ngFor="let quoteGroup of quoteCollection">
+      <ion-icon [name]="quoteGroup.icon" item-left></ion-icon>
+      <h2>{{ quoteGroup.category | uppercase }}</h2>
+      <p>{{ quoteGroup.quotes.length }} Quotes</p>
+    </button>
+  </ion-list>
 </ion-content>
