--- a/src/pages/quotes/quotes.html
+++ b/src/pages/quotes/quotes.html
@@ -23,7 +23,8 @@
       <p class="author" text-right>{{quote.person}}</p>
       <ion-row>
         <ion-col text-right>
-          <button ion-button clear small (click)="onAddToFavorite(quote)">Favorite</button>
+          <button ion-button clear small (click)="onAddToFavorites(quote)" *ngIf="!isFavorite(quote)">Favorite</button>
+          <button ion-button clear small color="danger" (click)="onRemoveFromFavorites(quote)" *ngIf="isFavorite(quote)">Unavorite</button>
         </ion-col>
       </ion-row>
     </ion-card-content>
