Added settings page to change background, sidebar and slide to delete favorite quote

--- a/src/pages/quotes/quotes.html
+++ b/src/pages/quotes/quotes.html
@@ -6,9 +6,12 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>{{quoteGroup.category | uppercase}}</ion-title>
-  </ion-navbar>
+    <ion-navbar start>
+      <button ion-button color="primary" menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>{{quoteGroup.category | uppercase}}</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
