--- a/src/pages/favorite-quotes/favorite-quotes.html
+++ b/src/pages/favorite-quotes/favorite-quotes.html
@@ -1,12 +1,9 @@
-<!--
-  Generated template for the FavoriteQuotesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar start>
+      <button ion-button color="primary" menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
     <ion-title>Favorite Quotes</ion-title>
   </ion-navbar>
 
@@ -15,10 +12,17 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let quote of quotes"
-              (click)="onViewQuote(quote)">
-      <h2>{{quote.person}}</h2>
-      <p>{{quote.text}}</p>
-    </ion-item>
+    <ion-item-sliding *ngFor="let quote of quotes">
+      <ion-item [color]="getBackgroundSetting()" (click)="onViewQuote(quote)">
+        <h2>{{quote.person}}</h2>
+        <p>{{quote.text}}</p>
+      </ion-item>
+      <ion-item-options>
+        <button ion-button color="danger" (click)="onRemoveFromFavorites(quote)">
+          <ion-icon name="trash"></ion-icon>
+          Delete
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
