--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -6,13 +6,25 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>settings</ion-title>
+  <ion-navbar start>
+    <button ion-button color="primary" menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Settings</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-label>Alternative Background</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-toggle (ionChange)="onToggle($event)" [checked]="getCurrentSetting()"></ion-toggle>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
